# EgnaNetwork

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: network_benchmark.rs  simplified_benchmark.rs
examples/: demo.rs
src/: lib.rs
src/net/: chunk.rs  consts.rs  input.rs  message.rs  mod.rs  output.rs
