[package]
name = "egna-network"
version = "0.1.0"
edition = "2024"

[lib]
name = "egna-network"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
rand = "0.9.1"
crc32fast = "1.5.0"
bytes = "1.8"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "network_benchmark"
harness = false

[[bench]]
name = "simplified_benchmark"
harness = false

[[example]]
name = "demo"
path = "examples/demo.rs"
